WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100958
Memory instrumentation: do not call checkCountedObject with wrong pointers
https://bugs.webkit.org/show_bug.cgi?id=100958
Summary
Memory instrumentation: do not call checkCountedObject with wrong pointers
Yury Semikhatsky
Reported
2012-11-01 08:17:04 PDT
MemoryInstrumentationClient::checkCountedObject should be called only when we know that the address passed to the method is the heap address of an object that has been allocated by malloc.
Attachments
Patch
(11.66 KB, patch)
2012-11-01 08:30 PDT
,
Yury Semikhatsky
apavlov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2012-11-01 08:30:30 PDT
Created
attachment 171857
[details]
Patch
Ilya Tikhonovsky
Comment 2
2012-11-01 23:39:46 PDT
lgtm
Alexander Pavlov (apavlov)
Comment 3
2012-11-02 00:29:16 PDT
Comment on
attachment 171857
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=171857&action=review
> Tools/TestWebKitAPI/Tests/WTF/MemoryInstrumentationTest.cpp:-791 > -
blank line in between?
Yury Semikhatsky
Comment 4
2012-11-02 00:49:12 PDT
(In reply to
comment #2
)
> lgtm
Done.
Yury Semikhatsky
Comment 5
2012-11-02 01:06:56 PDT
Committed
r133272
: <
http://trac.webkit.org/changeset/133272
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug