Memory instrumentation: do not call checkCountedObject with wrong pointers https://bugs.webkit.org/show_bug.cgi?id=100958

Reviewed by Alexander Pavlov.

Source/WebCore:

Removed redundant call to checkCountedObject.

* inspector/MemoryInstrumentationImpl.cpp:
(WebCore::MemoryInstrumentationClientImpl::countObjectSize):

Source/WTF:

Removed calls to checkCountedObject from places where the pointer may contain
an address of a base class which may differ from the actual object pointer. Instead
checkCountedObject is only called right after processing deferred pointer where
we know real address.

* wtf/MemoryInstrumentation.h:
(WTF::MemoryInstrumentation::addObjectImpl):
(WTF::::process):

Tools:

* TestWebKitAPI/Tests/WTF/MemoryInstrumentationTest.cpp: test that if there
if there is class A derived from classes B and C and we have pointer B* to an
object of class A then MemoryInstrumentationClient::checkoutCountedObject won't
be called for B* but only for A*

Also MemoryInstrumentation implementation used in the test was refactored to
allow passing client as a parameter. The client implementation was extracted into
a top-level class MemoryInstrumentationTestClient.

Canonical link: https://commits.webkit.org/119126@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133272 268f45cc-cd09-0410-ab3c-d52691b4dbfc