Tools/TestWebKitAPI/Tests/WTF/MemoryInstrumentationTest.cpp
@@ -81,57 +81,65 @@ using WTF::MemoryObjectType;
 
 MemoryObjectType TestType = "TestType";
 
-class InstrumentationTestHelper : public WTF::MemoryInstrumentation {
+class MemoryInstrumentationTestClient : public WTF::MemoryInstrumentationClient {
 public:
-    InstrumentationTestHelper()
-        : MemoryInstrumentation(&m_client)
-    { }
+    virtual void countObjectSize(const void*, MemoryObjectType objectType, size_t size)
+    {
+        TypeToSizeMap::AddResult result = m_totalSizes.add(objectType, size);
+        if (!result.isNewEntry)
+            result.iterator->value += size;
+    }
+    virtual bool visited(const void* object) { return !m_visitedObjects.add(object).isNewEntry; }
+    virtual void checkCountedObject(const void*) { }
+
+    size_t visitedObjects() const { return m_visitedObjects.size(); }
+    size_t totalSize(const MemoryObjectType objectType) const
+    {
+        TypeToSizeMap::const_iterator i = m_totalSizes.find(objectType);
+        return i == m_totalSizes.end() ? 0 : i->value;
+    }
+
+    size_t reportedSizeForAllTypes() const
+    {
+        size_t size = 0;
+        for (TypeToSizeMap::const_iterator i = m_totalSizes.begin(); i != m_totalSizes.end(); ++i)
+            size += i->value;
+        return size;
+    }
+
+private:
+    typedef HashMap<MemoryObjectType, size_t> TypeToSizeMap;
+    TypeToSizeMap m_totalSizes;
+    WTF::HashSet<const void*> m_visitedObjects;
+};
+
+class InstrumentationTestImpl : public WTF::MemoryInstrumentation {
+public:
+    explicit InstrumentationTestImpl(MemoryInstrumentationTestClient* client)
+        : MemoryInstrumentation(client)
+        , m_client(client) { }
 
     virtual void processDeferredInstrumentedPointers();
     virtual void deferInstrumentedPointer(PassOwnPtr<InstrumentedPointerBase>);
 
-    size_t visitedObjects() const { return m_client.visitedObjects(); }
-    size_t reportedSizeForAllTypes() const { return m_client.reportedSizeForAllTypes(); }
-    size_t totalSize(const MemoryObjectType objectType) const { return m_client.totalSize(objectType); }
+    size_t visitedObjects() const { return m_client->visitedObjects(); }
+    size_t reportedSizeForAllTypes() const { return m_client->reportedSizeForAllTypes(); }
+    size_t totalSize(const MemoryObjectType objectType) const { return m_client->totalSize(objectType); }
 
 private:
-    class Client : public WTF::MemoryInstrumentationClient {
-    public:
-        virtual void countObjectSize(const void*, MemoryObjectType objectType, size_t size)
-        {
-            TypeToSizeMap::AddResult result = m_totalSizes.add(objectType, size);
-            if (!result.isNewEntry)
-                result.iterator->value += size;
-        }
-        virtual bool visited(const void* object) { return !m_visitedObjects.add(object).isNewEntry; }
-        virtual void checkCountedObject(const void*) { }
-
-        size_t visitedObjects() const { return m_visitedObjects.size(); }
-        size_t totalSize(const MemoryObjectType objectType) const
-        {
-            TypeToSizeMap::const_iterator i = m_totalSizes.find(objectType);
-            return i == m_totalSizes.end() ? 0 : i->value;
-        }
-
-        size_t reportedSizeForAllTypes() const
-        {
-            size_t size = 0;
-            for (TypeToSizeMap::const_iterator i = m_totalSizes.begin(); i != m_totalSizes.end(); ++i)
-                size += i->value;
-            return size;
-        }
-
-    private:
-        typedef HashMap<MemoryObjectType, size_t> TypeToSizeMap;
-        TypeToSizeMap m_totalSizes;
-        WTF::HashSet<const void*> m_visitedObjects;
-    };
-
-    Client m_client;
+    MemoryInstrumentationTestClient* m_client;
     Vector<OwnPtr<InstrumentedPointerBase> > m_deferredInstrumentedPointers;
 };
 
-void InstrumentationTestHelper::processDeferredInstrumentedPointers()
+class InstrumentationTestHelper : public InstrumentationTestImpl {
+public:
+    InstrumentationTestHelper() : InstrumentationTestImpl(&m_client) { }
+
+private:
+    MemoryInstrumentationTestClient m_client;
+};
+
+void InstrumentationTestImpl::processDeferredInstrumentedPointers()
 {
     while (!m_deferredInstrumentedPointers.isEmpty()) {
         OwnPtr<InstrumentedPointerBase> pointer = m_deferredInstrumentedPointers.last().release();
@@ -140,7 +148,7 @@ void InstrumentationTestHelper::processDeferredInstrumentedPointers()
     }
 }
 
-void InstrumentationTestHelper::deferInstrumentedPointer(PassOwnPtr<InstrumentedPointerBase> pointer)
+void InstrumentationTestImpl::deferInstrumentedPointer(PassOwnPtr<InstrumentedPointerBase> pointer)
 {
     m_deferredInstrumentedPointers.append(pointer);
 }
@@ -789,7 +797,6 @@ public:
     }
 };
 
-
 TEST(MemoryInstrumentationTest, instrumentedWithMultipleAncestors)
 {
     InstrumentationTestHelper helper;
@@ -799,10 +806,42 @@ TEST(MemoryInstrumentationTest, instrumentedWithMultipleAncestors)
     Instrumented* ancestorPointer = descendantPointer;
     InstrumentedOwner<Instrumented*> ancestorPointerOwner(ancestorPointer);
     EXPECT_NE(static_cast<void*>(ancestorPointer), static_cast<void*>(descendantPointer));
+
     helper.addRootObject(descendantPointerOwner);
     helper.addRootObject(ancestorPointerOwner);
     EXPECT_EQ(sizeof(ClassWithTwoAncestors), helper.reportedSizeForAllTypes());
     EXPECT_EQ(2u, helper.visitedObjects());
+}
+
+class CheckCountedObjectsClient : public MemoryInstrumentationTestClient {
+public:
+    CheckCountedObjectsClient(const void* expectedPointer) : m_expectedPointer(expectedPointer), m_expectedPointerFound(false) { }
+    virtual void checkCountedObject(const void* pointer)
+    {
+        EXPECT_EQ(pointer, m_expectedPointer);
+        m_expectedPointerFound = true;
+    }
+    bool expectedPointerFound() { return m_expectedPointerFound; }
+
+private:
+    const void* m_expectedPointer;
+    bool m_expectedPointerFound;
+};
+
+TEST(MemoryInstrumentationTest, checkCountedObjectWithMultipleAncestors)
+{
+    OwnPtr<ClassWithTwoAncestors> instance = adoptPtr(new ClassWithTwoAncestors());
+    ClassWithTwoAncestors* descendantPointer = instance.get();
+    InstrumentedOwner<ClassWithTwoAncestors*> descendantPointerOwner(descendantPointer);
+    Instrumented* ancestorPointer = descendantPointer;
+    InstrumentedOwner<Instrumented*> ancestorPointerOwner(ancestorPointer);
+    EXPECT_NE(static_cast<void*>(ancestorPointer), static_cast<void*>(descendantPointer));
+
+    CheckCountedObjectsClient client(instance.get());
+    InstrumentationTestImpl instrumentation(&client);
+    instrumentation.addRootObject(descendantPointerOwner);
+    instrumentation.addRootObject(ancestorPointerOwner);
+    EXPECT_TRUE(client.expectedPointerFound());
 }
 
 } // namespace
